// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Avatar Accent Colors 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-1"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-2"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-3"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-4"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-5"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-6"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-7"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-8"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--money-bills fd-avatar--accent-color-9"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Background Image 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--xs fd-avatar--thumbnail fd-avatar--circle"
      role="presentation"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-avatar fd-avatar--s fd-avatar--thumbnail fd-avatar--circle"
      role="presentation"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-avatar fd-avatar--m fd-avatar--thumbnail fd-avatar--circle"
      role="presentation"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-avatar fd-avatar--l fd-avatar--thumbnail fd-avatar--circle"
      role="presentation"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
    <span
      className="fd-avatar fd-avatar--xl fd-avatar--thumbnail fd-avatar--circle"
      role="presentation"
      style={
        Object {
          "backgroundImage": "url(./assets/nature.jpg)",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Border 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--xs sap-icon--washing-machine fd-avatar--transparent fd-avatar--border"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--s sap-icon--washing-machine fd-avatar--transparent fd-avatar--border"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--washing-machine fd-avatar--circle fd-avatar--transparent fd-avatar--border"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--l sap-icon--washing-machine fd-avatar--circle fd-avatar--transparent fd-avatar--border"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--xl sap-icon--washing-machine fd-avatar--circle fd-avatar--transparent fd-avatar--border"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Circle 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--xs sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--s sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--l sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--xl sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Initials 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      aria-label="Wendy Wallace"
      className="fd-avatar fd-avatar--xs"
      role=""
    >
      WW
    </span>
    <span
      aria-label="Wendy Wallace"
      className="fd-avatar fd-avatar--s"
      role=""
    >
      WW
    </span>
    <span
      aria-label="Wendy Wallace"
      className="fd-avatar fd-avatar--m"
      role=""
    >
      WW
    </span>
    <span
      aria-label="Wendy Wallace"
      className="fd-avatar fd-avatar--l"
      role=""
    >
      WW
    </span>
    <span
      aria-label="Wendy Wallace"
      className="fd-avatar fd-avatar--xl"
      role=""
    >
      WW
    </span>
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Placeholder 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--xs sap-icon--washing-machine fd-avatar--placeholder fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--s sap-icon--washing-machine fd-avatar--placeholder fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--washing-machine fd-avatar--placeholder fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--l sap-icon--washing-machine fd-avatar--placeholder fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--xl sap-icon--washing-machine fd-avatar--placeholder fd-avatar--circle"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Primary 1`] = `
<div
  dir="ltr"
>
  <span
    className="fd-avatar fd-avatar--m sap-icon--cart"
    role="presentation"
  />
</div>
`;

exports[`Storyshots Component API/Avatar Sizes 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--xs sap-icon--washing-machine"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--s sap-icon--washing-machine"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--washing-machine"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--l sap-icon--washing-machine"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--xl sap-icon--washing-machine"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Tile 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--xs sap-icon--washing-machine fd-avatar--tile fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--s sap-icon--washing-machine fd-avatar--tile fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--m sap-icon--washing-machine fd-avatar--tile fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--l sap-icon--washing-machine fd-avatar--tile fd-avatar--circle"
      role="presentation"
    />
    <span
      className="fd-avatar fd-avatar--xl sap-icon--washing-machine fd-avatar--tile fd-avatar--circle"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Transparent 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      aria-label="Wendy Wallace"
      className="fd-avatar fd-avatar--m fd-avatar--transparent"
      role=""
    >
      WW
    </span>
    <span
      className="fd-avatar fd-avatar--l sap-icon--washing-machine fd-avatar--transparent"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/Avatar Zoom 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <span
      className="fd-avatar fd-avatar--xs sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    >
      <span
        className="fd-avatar__zoom-icon sap-icon--edit"
        role="presentation"
      />
    </span>
    <span
      className="fd-avatar fd-avatar--s sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    >
      <span
        className="fd-avatar__zoom-icon sap-icon--edit"
        role="presentation"
      />
    </span>
    <span
      className="fd-avatar fd-avatar--m sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    >
      <span
        className="fd-avatar__zoom-icon sap-icon--edit"
        role="presentation"
      />
    </span>
    <span
      className="fd-avatar fd-avatar--l sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    >
      <span
        className="fd-avatar__zoom-icon sap-icon--edit"
        role="presentation"
      />
    </span>
    <span
      className="fd-avatar fd-avatar--xl sap-icon--washing-machine fd-avatar--circle"
      role="presentation"
    >
      <span
        className="fd-avatar__zoom-icon sap-icon--edit"
        role="presentation"
      />
    </span>
  </div>
</div>
`;
